# slack-translator-bot

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  setting.json
data/: auto_translation_config.json  language_config.json  modal.json
slack-translator-bot/: main.py
slack_translator_bot/: main.py
templates/: language_config.json  modal.json
